Add three style prompts

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -29,7 +29,7 @@
   </div>
 
   <button id="summarize">Summarize This Page</button>
-  <div id="summary"></div>
+  <div id="summary" class="markdown-body"></div>
   <div id="error" class="error" style="display: none;"></div>
   
   <div class="footer">
